# dilma

./: .gitattributes  .gitignore  Dockerfile  allen_nlp_classifier.ipynb  calculate_metrics.py  create_levenshtein_dataset.py  debug_attacker.ipynb  eval.py  get_results.ipynb  perplex.ipynb  pyproject.toml  readme.md  run_cascada.py  run_commands.ipynb  run_commands.txt  run_commands_2.ipynb  run_commands_2b.ipynb  run_commands_new.txt  run_gradient_attack.py  run_hotflip.py  run_mcmc.py  texar_data_preparation.ipynb  train.py  train_all_classifiers_basic.sh  train_all_classifiers_nonmasked_attention.sh  train_classifier_basic.sh  train_classifier_nonmasked_attention.sh  train_copynets.sh  train_eval_classifiers.sh  train_eval_model.py  train_levenshteins.sh  train_lm.py  train_logreg.py
adat/: dataset.py  lm.py  masker.py  mcmc.py  models.py  tokens_masker.py  utils.py
adat/attackers/: __init__.py  attacker.py  cascada.py  (+7 more)
dilma/: common.py
notebooks/: ai_academy_dataset_preparation.ipynb  allen_nlp_classifier.ipynb  cascada_v2_test.ipynb  kaggle_dataset_preparation.ipynb  logistic_regression-ag_news.ipynb  logistic_regression-kaggle_transactions.ipynb  logistic_regression.ipynb  logistic_regression_ai_academy.ipynb  mcmc_test.ipynb  mcmc_until_satisfied.ipynb  mcmc_vs_random_sampler.ipynb  perplexity.ipynb  prepare_lev_dataset.ipynb  seq2seq.ipynb  test.ipynb  transactions_dataset.ipynb  wer_analysis.ipynb
old/: Dockerfile
scripts/: aggregate_results.py  attack.py  calculate_metrics.py  cascada_attack.py  create_levenshtein_dataset.py  evaluate_attack.py  fine_tune.py  hotflip_attack.py  prepare_for_discr.py  prepare_for_fine_tuning.py  run_cascada.py  run_hotflip.py  run_mcmc.py  select_best_hyperparams.py  train_logreg.py
(+189 files in other folders)
