[tool.poetry]
name = "adat"
version = "0.1.0"
description = "Adversarial Attacks on Symbolic Sequence Classifiers"
authors = ["Ivan Fursov <fursovia@gmail.com>"]
repository = "https://github.com/fursovia/adversarial_attacks"
readme = 'readme.md'

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "=1.4.0"
allennlp = "=1.0.0.rc3"
allennlp-models = "=1.0.0.rc3"
python-Levenshtein = "=0.12.0"
tabulate = "^0.8.7"

[build-system]
requires = ["poetry>=0.12.17"]
build-backend = "poetry.masonry.api"