[tool.poetry]
name = "adat"
version = "0.1.0"
description = "Adversarial Attacks on Symbolic Sequence Classifiers"
authors = ["Name Name <name@gmail.com>"]
repository = "https://github.com/fursovia/adversarial_attacks"
readme = 'readme.md'

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "=1.5.0"
allennlp = "=1.0.0.rc3"
allennlp-models = "=1.0.0.rc3"
python-Levenshtein = "=0.12.0"
tabulate = "^0.8.7"
matplotlib = "^3.2"
jsonlines = "^1.2"
pandas = "^1.0"
ipython = "^7.15"

[build-system]
requires = ["poetry>=0.12.17"]
build-backend = "poetry.masonry.api"